// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ticket email MIME snapshots standard ticket includes alternative bodies, QR, and calendar 1`] = `
"Subject: Your Ticket for Email Snapshot Event is enclosed!
Content-Type: multipart/mixed; boundary="BOUNDARY"
Content-Type: multipart/alternative; boundary="BOUNDARY"
Content-Type: text/plain; charset=UTF-8
Content-Type: multipart/related; boundary="BOUNDARY"
Content-Type: text/html; charset=UTF-8
Content-Type: image/png; name="ticket-qr.png"
Content-Disposition: inline; filename="ticket-qr.png"
Content-ID: <ticket-qr-00000000-0000-4000-8000-000000000001@stanfordspeakersbureau>
Content-Type: text/calendar; charset="utf-8"; name="stanford-speakers-bureau-event.ics"
Content-Disposition: attachment; filename="stanford-speakers-bureau-event.ics""
`;

exports[`ticket email MIME snapshots standby ticket deliberately omits the scannable QR 1`] = `
"Subject: Your standby ticket for Email Snapshot Event is reserved
Content-Type: multipart/mixed; boundary="BOUNDARY"
Content-Type: multipart/alternative; boundary="BOUNDARY"
Content-Type: text/plain; charset=UTF-8
Content-Type: text/html; charset=UTF-8
Content-Type: text/calendar; charset="utf-8"; name="stanford-speakers-bureau-event.ics"
Content-Disposition: attachment; filename="stanford-speakers-bureau-event.ics""
`;

exports[`ticket email MIME snapshots VIP ticket retains QR and calendar attachments 1`] = `
"Subject: Your Ticket for Email Snapshot Event is enclosed!
Content-Type: multipart/mixed; boundary="BOUNDARY"
Content-Type: multipart/alternative; boundary="BOUNDARY"
Content-Type: text/plain; charset=UTF-8
Content-Type: multipart/related; boundary="BOUNDARY"
Content-Type: text/html; charset=UTF-8
Content-Type: image/png; name="ticket-qr.png"
Content-Disposition: inline; filename="ticket-qr.png"
Content-ID: <ticket-qr-00000000-0000-4000-8000-000000000001@stanfordspeakersbureau>
Content-Type: text/calendar; charset="utf-8"; name="stanford-speakers-bureau-event.ics"
Content-Disposition: attachment; filename="stanford-speakers-bureau-event.ics""
`;

exports[`ticket email MIME snapshots waitlist confirmation snapshots its position-focused MIME 1`] = `
"Subject: You're on the waitlist for Email Snapshot Event
Content-Type: multipart/alternative; boundary="BOUNDARY"
Content-Type: text/plain; charset=UTF-8
Content-Type: text/html; charset=UTF-8"
`;

exports[`ticket email MIME snapshots cancellation confirmation has no ticket attachments 1`] = `
"Subject: Cancellation Confirmed: Your ticket for Email Snapshot Event
Content-Type: multipart/alternative; boundary="BOUNDARY"
Content-Type: text/plain; charset=UTF-8
Content-Type: text/html; charset=UTF-8"
`;

exports[`ticket email MIME snapshots VIP scan notification captures internal alert structure 1`] = `
"Subject: VIP Ticket Scanned: Email Snapshot Event
Content-Type: multipart/alternative; boundary="BOUNDARY"
Content-Type: text/plain; charset=UTF-8
Content-Type: text/html; charset=UTF-8"
`;
